[project]
name = "czc-diffutil"
version = "0.0.1"
authors = [
  { name="Christopher Collier", email="czcollier@gmail.com" },
]
description = "A small set of utilities for managing images - used for diffusion model output"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "imagehash",
  "piexif",
  "Pillow",
  "google-cloud-storage"
]

[project.urls]
Homepage = "https://github.com/czcollier/diffutil"

[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"